Overflow fixed

--- a/scss/mini/_base.scss
+++ b/scss/mini/_base.scss
@@ -6,7 +6,7 @@
    margin: 0;
 }
 body {
-   overflow: hidden;
+//    overflow: hidden;
 }
 img {
    display: block;
