--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,23 +10,24 @@
    transition: .3s;
 }
 html {
-   overflow: hidden !important;
-   min-height: 100vh;
-   max-height: 100vh;
+   height: 100vh;
+   overflow-y: scroll;
+   overflow-x: hidden;
 }
 body {
    background: url(../img/stars.png), $deepBlue;
-   max-height: 100vh;
-   min-height: 100vh;
-   overflow: hidden !important;
+   height: 100vh;
+   overflow-y: scroll;
+   overflow-x: hidden;
 }
 
 
 .closure {
-   position: fixed;
+   position: absolute;
    width: 100%;
    height: 100vh;
-   max-height: 100vh;
+   min-height: 680px;
+   overflow: hidden;
 }
 
 
@@ -96,7 +97,7 @@ nav.sidebar {
       margin-left: 50px;
       width: 200px;
       position: absolute;
-      bottom: 5vh;
+      bottom: 12vh;
    }
 }
 nav.sidebar.closed {
